Text paragraphs added

--- a/index.html
+++ b/index.html
@@ -30,29 +30,32 @@
                 <h2>Career</h2>
                 <p> Hello, I am Steven Langlois. I am orginally from Wisconsin but after graduating from the University
                     of Wisconsin-Stout I moved to Minnesota for better carreer opportunities. I am currently employed
-                    with wells fargo
-                    and working on a coding bootcamp to further my career.
+                    with Wells Fargo at the moment
+                    but I am hoping with the expereince working in a coding bootcamp to further my career.
                 </p>
             </section>
             <section class="Family">
                 <img src="./img/family.jpg" alt="Picture 1" class="float-left">
                 <h2>Family</h2>
                 <p>
-                    random text here
+                    My family is from Altoona, WI. My father is currently retired and my mother is a teacher in Altoona. My brother is currently going to school at UW-Eau Claire for a computer science major. 
+                    We also have a dog named dexter, who likes to run around and play fetch.
                 </p>
             </section>
             <section class="Hobbies">
                 <img src="./img/Dexter.jpg" alt="Picture 2" class="float-left">
                 <h2>Hobbies</h2>
                 <p>
-                    more random text here
+                    My hobbies included watching sporting events whether is be on TV or in person. I have been to many Milwaukee Brewer baseball games and one Minnesota Twin game. I am a Brewer fan but I enjoy watching both teams.
+                    I also enjoy watching movies and TV shows. My favorite movie is "The Goonies" and my favorite TV show is "Breaking Bad".
                 </p>
             </section>
             <section class="Future">
                 <img src="./img/dexter 2.jpg" alt="Picture 3" class="float-left">
                 <h2>Future</h2>
                 <p>
-                    last text here
+                    My plans for the future include completing my coding bootcamp that I am currently apart of and potentially find a full stack developer position. I am hoping to learn much more real world applications and to learn from peers at the job place.
+                    I am hoping to grow my portfolio with these experiences and look forward to any knew challenges that might arise within the future.
                 </p>
             </section>
         </section>
@@ -61,27 +64,27 @@
             <h3 id="Portfolio">Portfolio</h2>
                 <section class="big-portfolio">
                     <figure class="first-portfolio">
-                        <a id="Image-1" href="https://github.com/Steven-Lang99?tab=repositories"><img src="./img/HTML.png"
-                            style="border: double;" height="400" width="400" /></a>
+                        <a id="Image-1" href="https://github.com/Steven-Lang99?tab=repositories"><img
+                                src="./img/HTML.png" style="border: double;" height="400" width="400" /></a>
                         <figcaption>Project #1</figcaption>
-                        </figure>
+                    </figure>
                 </section>
                 <section class="portfolio">
                     <figure class="column">
                         <a href="https://github.com/Steven-Lang99?tab=repositories"><img src="./img/CSS img.png"
                                 style="border: double;" height="250" width="275" /></a>
                         <p>Project #2</p>
-                        </figure>
+                    </figure>
                     <figure class="column">
                         <a href="https://github.com/Steven-Lang99?tab=repositories"><img src="./img/java-script.jpg"
                                 style="border: double;" height="250" width="275" /></a>
                         <p>Project #3</p>
-                        </figure>
+                    </figure>
                     <figure class="column">
                         <a href="https://github.com/Steven-Lang99?tab=repositories"><img src="./img/node-js-main.jpg"
                                 style="border: double;" height="250" width="275" /></a>
                         <p>Project #4</p>
-                        </figure>
+                    </figure>
 
                 </section>
         </section>
