adjusted media query

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!--This section is for the header links-->
     <header class="text-right">
         <h1>Steven Langlois</h1>
         <ul>
@@ -23,6 +24,7 @@
     </header>
 
     <main>
+        <!--This section is for the about me page and the images assigned-->
         <section id="left-section">
             <h1 id="About me">About me</h1>
             <section class="Career">
@@ -59,12 +61,12 @@
                 </p>
             </section>
         </section>
-
+        <!--The section is for the project images-->
         <section id="right-section">
             <h3 id="Portfolio">Portfolio</h3>
                 <section class="big-portfolio">
                     <figure class="first-portfolio">
-                        <a id="Image-1" href="https://github.com/Steven-Lang99?tab=repositories"><img
+                        <a href="https://github.com/Steven-Lang99?tab=repositories"><img
                                 src="./img/HTML.png" style="border: double;" height="400" width="400" /></a>
                         <figcaption>Project #1</figcaption>
                     </figure>
@@ -89,7 +91,7 @@
                 </section>
         </section>
     </main>
-
+    <!--This section is for the footer and the links assigned-->
     <footer class="text-center">
         <h4 id="Contact">Contact Information:</h4>
         <ul>
