new changes to media query

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                 <img src="./img/family.jpg" alt="Picture 1" class="float-left">
                 <h2>Family</h2>
                 <p>
-                    My family is from Altoona, WI. My father is currently retired and my mother is a teacher in Altoona. My brother is currently going to school at UW-Eau Claire for a computer science major. 
+                    My family is from Altoona, WI. My father is currently retired and my mother is a teacher in Altoona.
+                    My brother is currently going to school at UW-Eau Claire for a computer science major.
                     We also have a dog named dexter, who likes to run around and play fetch.
                 </p>
             </section>
@@ -48,47 +49,53 @@
                 <img src="./img/Dexter.jpg" alt="Picture 2" class="float-left">
                 <h2>Hobbies</h2>
                 <p>
-                    My hobbies included watching sporting events whether is be on TV or in person. I have been to many Milwaukee Brewer baseball games and one Minnesota Twin game. I am a Brewer fan but I enjoy watching both teams.
-                    I also enjoy watching movies and TV shows. My favorite movie is "The Goonies" and my favorite TV show is "Breaking Bad".
+                    My hobbies included watching sporting events whether is be on TV or in person. I have been to many
+                    Milwaukee Brewer baseball games and one Minnesota Twin game. I am a Brewer fan but I enjoy watching
+                    both teams.
+                    I also enjoy watching movies and TV shows. My favorite movie is "The Goonies" and my favorite TV
+                    show is "Breaking Bad".
                 </p>
             </section>
             <section class="Future">
                 <img src="./img/dexter 2.jpg" alt="Picture 3" class="float-left">
                 <h2>Future</h2>
                 <p>
-                    My plans for the future include completing my coding bootcamp that I am currently apart of and potentially find a full stack developer position. I am hoping to learn much more real world applications and to learn from peers at the job place.
-                    I am hoping to grow my portfolio with these experiences and look forward to any knew challenges that might arise within the future.
+                    My plans for the future include completing my coding bootcamp that I am currently apart of and
+                    potentially find a full stack developer position. I am hoping to learn much more real world
+                    applications and to learn from peers at the job place.
+                    I am hoping to grow my portfolio with these experiences and look forward to any knew challenges that
+                    might arise within the future.
                 </p>
             </section>
         </section>
         <!--The section is for the project images-->
         <section id="right-section">
             <h3 id="Portfolio">Portfolio</h3>
-                <section class="big-portfolio">
-                    <figure class="first-portfolio">
-                        <a href="https://github.com/Steven-Lang99?tab=repositories"><img
-                                src="./img/HTML.png" style="border: double;" height="400" width="400" /></a>
-                        <figcaption>Project #1</figcaption>
-                    </figure>
-                </section>
-                <section class="portfolio">
-                    <figure class="column">
-                        <a href="https://github.com/Steven-Lang99?tab=repositories"><img src="./img/CSS img.png"
-                                style="border: double;" height="250" width="275" /></a>
-                        <p>Project #2</p>
-                    </figure>
-                    <figure class="column">
-                        <a href="https://github.com/Steven-Lang99?tab=repositories"><img src="./img/java-script.jpg"
-                                style="border: double;" height="250" width="275" /></a>
-                        <p>Project #3</p>
-                    </figure>
-                    <figure class="column">
-                        <a href="https://github.com/Steven-Lang99?tab=repositories"><img src="./img/node-js-main.jpg"
-                                style="border: double;" height="250" width="275" /></a>
-                        <p>Project #4</p>
-                    </figure>
+            <section class="big-portfolio">
+                <figure class="first-portfolio">
+                    <a href="https://github.com/Steven-Lang99?tab=repositories"><img src="./img/HTML.png"
+                            style="border: double;" height="400" width="400" /></a>
+                    <figcaption>Project #1</figcaption>
+                </figure>
+            </section>
+            <section class="portfolio">
+                <figure class="column">
+                    <a href="https://github.com/Steven-Lang99?tab=repositories"><img src="./img/CSS img.png"
+                            style="border: double;" height="250" width="275" /></a>
+                    <p>Project #2</p>
+                </figure>
+                <figure class="column">
+                    <a href="https://github.com/Steven-Lang99?tab=repositories"><img src="./img/java-script.jpg"
+                            style="border: double;" height="250" width="275" /></a>
+                    <p>Project #3</p>
+                </figure>
+                <figure class="column">
+                    <a href="https://github.com/Steven-Lang99?tab=repositories"><img src="./img/node-js-main.jpg"
+                            style="border: double;" height="250" width="275" /></a>
+                    <p>Project #4</p>
+                </figure>
 
-                </section>
+            </section>
         </section>
     </main>
     <!--This section is for the footer and the links assigned-->
