added new project

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <h3 id="Portfolio">Portfolio</h3>
             <section class="big-portfolio">
                 <figure class="first-portfolio">
-                    <a href="https://github.com/Steven-Lang99?tab=repositories"><img src="./img/HTML.png"
-                            style="border: double;" height="400" width="400" /></a>
+                    <a href="https://github.com/Lilniz/Chatter-Portal"><img src="./img/HTML.png" style="border: double;"
+                            height="400" width="400" /></a>
                     <figcaption>Project #1</figcaption>
                 </figure>
             </section>
