--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </section>
             <section class="portfolio">
                 <figure class="column">
-                    <a href="https://github.com/Steven-Lang99?tab=repositories"><img src="./img/CSS img.png"
+                    <a href="https://github.com/troymnelson/ChatApp"><img src="./img/CSS img.png"
                             style="border: double;" height="250" width="275" /></a>
                     <p>Project #2</p>
                 </figure>
