--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <p>Project #2</p>
                 </figure>
                 <figure class="column">
-                    <a href="https://github.com/Steven-Lang99?tab=repositories"><img src="./img/java-script.jpg"
+                    <a href="https://github.com/infinity-machine/p3"><img src="./img/java-script.jpg"
                             style="border: double;" height="250" width="275" /></a>
                     <p>Project #3</p>
                 </figure>
